# recon

./: .gitignore  Cargo.toml  README.md  cliff.toml  justfile  mise.toml  typos.toml  wkg.toml
.cargo/: audit.toml  config.toml
.github/actions/install-wild/: action.yml
.github/workflows/: audit.yml  ci.yml
audio_router/: Cargo.toml
audio_router/src/: main.rs
audio_router/src/sound_devices/: helper_functions.rs  input_hardware_device.rs  mod.rs  output_hardware_device.rs
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs  target.rs  windows_capture.rs
crates/game_capture/: Cargo.toml
crates/game_capture_dll/: Cargo.toml  build.rs
crates/game_capture_dll/src/: inject.rs  lib.rs  util.rs
crates/game_capture_dll/src/hooks/: dx9.rs  mod.rs
crates/game_capture_dll/src/renderer/: mod.rs
crates/game_capture_dll/src/renderer/backend/: mod.rs
crates/github_downloader/: Cargo.toml
crates/github_downloader/src/: lib.rs  models.rs
crates/luau-plugin/: Cargo.toml  test.lua
crates/luau-plugin/src/: main.rs
crates/recon/: Cargo.toml
crates/recon/src/: bindings.rs  main.rs  plugin_manager.rs  utils.rs
crates/recon_bus/: Cargo.toml  README.md
crates/recon_bus/src/: envelope.rs  guest.rs  host.rs  lib.rs  topic.rs  trie.rs
crates/recon_bus/wit/: event-bus.wit  world.wit
crates/recon_guest/: Cargo.toml  README.md
crates/recon_guest/src/: lib.rs
old/audio_router/: input_hardware_device.rs  mod.rs
old/gui/: mod.rs  test_component.rs
old/key_watcher/: rdev.rs
old/media_controls/: controller.rs  mod.rs
old/media_listener/: lib.rs  mod.rs
old/settings/: mod.rs
plugins/test_plugin/: Cargo.toml  mise.toml
plugins/test_plugin/src/: lib.rs
process_starter/: Cargo.toml
process_starter/src/: main.rs  process_watcher.rs
src/: helpers.rs  main.rs  settings.json  window_capture_sub.rs
src/audio_router/: helper_functions.rs  output_hardware_device.rs
src/gui/: mod.rs  style.rs
src/key_watcher/: common.rs  keycodes.rs  mod.rs  rdev.rs
src/media_controls/: controller.rs  sources.rs
src/media_listener/: storage_control.rs
src/persist/: gui.json  media_listener.json
window-capture/: Cargo.toml
window-capture/src/: capture.rs  d3d11.rs  frame.rs  window.rs
wit/: world.wit
