[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Night-Hunter-NF/recon"

[workspace.dependencies]
# Local crates
recon = { path = "crates/recon" }
recon_bus = { path = "crates/recon_bus" }

# GUI
iced = { version = "0.14", features = ["tokio"] }

# Async
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Concurrency
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
