[workspace]
resolver = "3"
members = ["crates/*", "plugins/*"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Night-Hunter-NF/recon"

[workspace.dependencies]
# Local crates
recon = { path = "crates/recon" }
recon_bus = { path = "crates/recon_bus" }

# GUI
iced = { version = "0.14.0-dev", features = ["tokio", "advanced", "image", "markdown", "svg"] }

# Async
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Concurrency
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Plugins
igloo = { git = "https://github.com/n1ght-hunter/igloo.git", rev = "712a6b4" }
igloo_guest = { git = "https://github.com/n1ght-hunter/igloo.git", rev = "712a6b4" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36" }
iced_core = { git = "https://github.com/iced-rs/iced.git", rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "9d56b488cc08b7365fb1839ed47ef92f3ff0fa36" }
