[workspace]
resolver = "3"
members = ["crates/*", "plugins/*"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Night-Hunter-NF/recon"

[workspace.dependencies]
# Local crates
recon = { path = "crates/recon" }
recon_bus = { path = "crates/recon_bus" }
recon_guest = { path = "crates/recon_guest" }

# GUI
iced = { version = "0.14.0", features = ["tokio", "advanced", "image", "markdown", "svg"] }

# Async
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Concurrency
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Plugins
igloo = { git = "https://github.com/n1ght-hunter/igloo.git", rev = "bf29b32" }
igloo_guest = { git = "https://github.com/n1ght-hunter/igloo.git", rev = "bf29b32" }

# Wasm runtime
wasmtime = { version = "44.0.0", features = ["component-model-async"] }
wasmtime-wasi = "44.0.0"

# Wasm guest
wit-bindgen = "0.57.1"

# Error handling
thiserror = "2"

