[package]
name = "audio_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"

[dependencies.iced_audio]
git = "https://github.com/fengalin/iced_audio.git"
branch = "pure-widgets"

[dependencies.iced]
version = "0.5"
features = ["canvas", "tokio", "debug"]

[dependencies.windows]
features = [
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Media",
  "Media_Devices",
  "Foundation_Collections",
  "Media_Control",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Com",
  "Win32_Devices_Properties",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_Media_Audio",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
  "Win32_Media_Multimedia",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Gdi",
]
version = "0.43"
