[package]
edition = "2021"
name = "process_starter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
iced = { version = "0.10.0", features = ["tokio"] }
serde = "1.0.188"
tokio = {version = "1.32", features = ["full"]}
trace = "0.1.7"
wmi = "0.13.1"

[dependencies.windows]
features = [
     "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Rpc",
    "Win32_System_Wmi",
]
version = "0.51"
