[package]
name = "window-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
parking_lot = "0.12.1"
thiserror = "1.0.48"
windows = { version = "0.51.1", features = [
    "Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "System",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
