[package]
name = "game_capture_dll"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[features]
default = ["dx9", "dx11", "dx12", "opengl3", "inject"]
dx9 = []
dx11 = []
dx12 = []
opengl3 = ["dep:gl_generator"]
inject = []


[dependencies]
hudhook = "*"

[build-dependencies]
cc = "1"
gl_generator = { version = "0.14.0", optional = true }
ureq = {version = "2.12.1", features = ["json"]}
serde_json.workspace = true