[package]
name = "game_capture_dll"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[features]
default = ["dx9", "dx11", "dx12", "opengl3", "inject"]
dx9 = []
dx11 = []
dx12 = []
opengl3 = ["dep:gl_generator"]
inject = []


[dependencies]
bitflags = "2.6.0"
hudhook = "*"
parking_lot = "0.12.3"
tracing.workspace = true

[dependencies.windows]
version = "0.58.0"
features = [
  "Foundation_Numerics",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] 


[build-dependencies]
cc = "1"
gl_generator = { version = "0.14.0", optional = true }
ureq = {version = "2.12.1", features = ["json"]}
serde_json.workspace = true
