[package]
name = "recon_guest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest SDK for Recon plugins — re-exports igloo_guest widgets and event bus bindings"

[dependencies]
igloo_guest.workspace = true
wit-bindgen.workspace = true
